fix: scrollbar

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -177,12 +177,7 @@ textarea {
 
   ::-webkit-scrollbar-thumb {
     background: #0E5F8C;
-    border-radius: 50%;
-  }
-
-  .scrollable-content {
-    max-height: 100%;
-    overflow-y: auto;
+    border-radius: 25%;
   }
 }
 
