--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -14,6 +14,6 @@
   --header-height: 86px;
   --sidebar-width: clamp(280px, 32vw, 420px);
 
-  --width-scrollbar: 0.2em;
+  --width-scrollbar: 0.3em;
 
 }
